# cacophoney

./: .gitignore  Cargo.toml  Config.toml  LICENSE-MIT  README.md
src/: config.rs  error.rs  main.rs  ui.rs  uilog.rs
src/config/: manager.rs  mod.rs
src/data/: crypto.rs  message.rs  mod.rs  user.rs
src/db/: dataapi.rs  mod.rs
src/helpers/: file.rs  ip.rs  mod.rs
src/server/: client.rs  mod.rs  node.rs
