[package]
name = "cacophoney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async dependencies
tokio = { version = "1.21.1", features = ["full"] }
futures = "0.3.21"

# Networking
quinn = "0.8.5"

# Serde
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_cbor = "0.11.2"
serde_with = "2.0.1"
toml = "0.5.9"

# Cryptography
blake3 = "1.3.1"
libsecp256k1 = "0.7.1"
aes-gcm = "0.10.1"

# Random
rand = "0.8.5"

# Terminal
log = "0.4.17"
crossterm = { version = "0.25.0", features = ["serde"] }
unicode-width = "0.1.10"
[dependencies.tui]
version = "0.19.0"
default-features = false
features = ["crossterm", "serde"]
