[package]
name = "cacophoney"
version = "0.1.0"
edition = "2021"
description = "A cacophoney node"
authors = ["Bluheir"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Other
generic-array = "0.14.6"
chrono = { version = "0.4.22", features = ["serde"]}
byteorder = "1.4.3"

# Async dependencies
tokio = { version = "1.21.1", features = ["full"] }
futures = "0.3.24"
async-trait = "0.1.57"

# Networking
quinn = "0.8.5"

# Serde
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_cbor = "0.11.2"
serde_with = "2.0.1"
toml = "0.5.9"

# Cryptography
blake3 = "1.3.1"
libsecp256k1 = "0.7.1"
aes-gcm = { version = "0.10.1", features = ["aes", "std"]}
rustls = { version = "0.20.6", features = ["dangerous_configuration", "quic"] }
rustls-pemfile = "1.0.1"
rcgen = { version = "0.10.0", features = ["pem"] }

# Random
rand = "0.8.5"

# Terminal
log = "0.4.17"
crossterm = { version = "0.25.0", features = ["serde"] }
unicode-width = "0.1.10"
tui = { version = "0.19.0", features = ["crossterm", "serde"]}
tracing = "0.1.36"
