[package]
name = "cacophoney"
version = "0.1.0"
edition = "2021"
description = "A cacophoney node"
authors = ["Bluheir"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Other
generic-array = "0.14.6"
chrono = { version = "0.4.22", features = ["serde"]}
byteorder = "1.4.3"
thiserror = "1.0.37"

# Async dependencies
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.24"
async-trait = "0.1.57"

# Networking
quinn = "0.8.5"
public-ip = { version = "0.2.2", features = ["dns-resolver"]}

# Serde
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_cbor = "0.11.2"
serde_with = "2.0.1"
toml = "0.5.9"


# Cryptography
blake3 = "1.3.1"
libsecp256k1 = "0.7.1"
aes-gcm = { version = "0.10.1", features = ["aes", "std"]}
rustls = { version = "0.20.6", features = ["dangerous_configuration", "quic"] }
rustls-pemfile = "1.0.1"
rcgen = { version = "0.10.0", features = ["pem"] }

# Random
rand = "0.8.5"

# Terminal
tracing = { version = "0.1.36" }
tracing-subscriber = "0.3.15"
rpassword = "7.0.0"
